--------------------------------------------------------------------------------
Evidence Package Changes Log
--------------------------------------------------------------------------------


Release 0.1.5: 
  
  - linear_paramater in RVModel now has an additional keyword 'filter_type' to 
    indicate wether Low pass or High pass filter is desired.
  - Fixed bug where RVModel couldn't be used without adding a jitter
  - Fixed post_processing to work with new lesta directory layout

--------------------------------------------------------------------------------

Release 0.1.4: June 25, 2020

  - If sesin and secos were used as free parameter, the post processing now checks
    for that and converts them to eccentricity and omega and plots those.
  - Corner plots were added to the post processing
  - There's an option now to choose if the planets should be ordered by period.
    This is added as a key to the rundict in the configfile called 'order_planets'.
    This should be a boolean to indicate if the ordering should happen or not.
    By default, if the key is not added, PolyChord will not order the planets.
  - The post processing now uses the full weighted posterior samples instead of
    the equally weighted posterior samples. This ensures a more reliable posterior
    and it usually has much more points that the equally weighted one.
  - The maxmimum likelihood point has been added to the results file.

--------------------------------------------------------------------------------

Release 0.1.3: April 23, 2020

  - Added Eccentricity values and semi amplitude to the printed results file.
  - Total number of likelihood calculations are now taken directly from the 
    PolyChord output instead of the custom counter.
  - In RVModel the check for a drift in the model is done in the init. This
    means that for models without drift in the default loglikelihood it only
    checks once if there is a model or not instead of doing the whole drift with