@@ -5,7 +5,7 @@ with open("README.md", "r") as fh:
 
 setuptools.setup(
     name="evidence",
-    version="0.1.4",
+    version="0.1.5",
     author="Nicolas Unger",
     author_email="nicolas.unger@unige.ch",
     description="Calculates the bayesian evidence for radial velocity models.",
